2011-07-20  Roland Clobus <rclobus@rclobus.nl>
	* common/notifying-string.gob: make reindent

2011-07-14  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c, common/gtk/gtkcompat.h: Restore compatibility
	with Debian Stable.

2011-07-06  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/player-icon.c, common/gtk/polygon.c, common/gtk/polygon.h,
	client/gtk/player.c, client/gtk/quote-view.c: Replace GdkGC.

2011-07-01  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c: Replace GDK deprecated functions.
	* client/gtk/identity.c: Replace GDK deprecated functions.

2011-06-26  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/Makefile.am, pioneers.nsi.in: Fix the Windows installer.
	(Taken from the 0.12.4 branch)

2011-06-13  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/player-icon.c, common/gtk/player-icon.h,
	common/gtk/common_gtk.c, common/log.c, common/log.h, server/gtk/main.c,
	server/gold.c, server/player.c, server/trade.c, server/server.h,
	server/pregame.c, NEWS, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/quote.c, client/gtk/chat.c, client/gtk/offline.c,
	client/gtk/gui.c, client/gtk/identity.c, client/gtk/connect.c,
	client/common/client.c, client/common/client.h,
	client/common/callback.c, client/common/player.c,
	client/help/C/pioneers.xml, client/ai/ai.c, client/ai/lobbybot.c:
	Change 'viewer' to 'spectator'.
	* meta-server/main.c, server/pregame.c, client/gtk/offline.c,
	client/common/player.c: Remove unused variables. Thanks to gcc-4.6 for
	finding them.

2011-06-05  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/offline.c,
	client/gtk/Makefile.am, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c, client/ai/ai.h,
	client/ai/greedy.c, client/ai/Makefile.am, client/ai/ai.c,