@@ -24,67 +24,29 @@
 #include "config.h"
 #include "frontend.h"
 #include "gtkbugs.h"
-
-/* image widgets showing resources */
-static GtkWidget *asset_images[NO_RESOURCE];
+#include "resource-view.h"
 
 /* 'total' label widget */
 static GtkWidget *asset_total_label;
 
-/* eventboxes for the tooltips */
-static GtkWidget *eventbox[NO_RESOURCE];
-static gint asset_size[NO_RESOURCE];
+static GtkWidget *resource[NO_RESOURCE];
 
-static void rebuild_single_resource(gint resource_type)
+static void rebuild_single_resource(Resource type)
 {
-	gint res[NO_RESOURCE];
-	gchar *tooltip_text;
-
-	memset(res, 0, sizeof(res));
-	res[resource_type] = resource_asset(resource_type);
-
-	resource_format_type_image(GTK_IMAGE(asset_images[resource_type]),
-				   res, asset_size[resource_type]);
-	tooltip_text =
-	    g_strdup_printf("%s: %d", resource_name(resource_type, TRUE),
-			    resource_asset(resource_type));
-	gtk_widget_set_tooltip_text(eventbox[resource_type], tooltip_text);
-	g_free(tooltip_text);
+	resource_view_set_amount_of_single_resource(RESOURCE_VIEW
+						    (resource[type]), type,
+						    resource_asset(type));
 }
 
-/* Set available width of resource table cell. */
-static void on_image_size_allocate(G_GNUC_UNUSED GtkWidget * widget,
-				   GtkAllocation * allocation,
-				   gpointer user_data)
-{
-	gint resource_type = GPOINTER_TO_INT(user_data);
-	gint old_size = asset_size[resource_type];
-
-	if (old_size == allocation->width)
-		return;
-	asset_size[resource_type] = allocation->width;
-	rebuild_single_resource(resource_type);
-}
-
-static void create_resource_image(GtkTable * table, gint resource_type,
+static void create_resource_image(GtkTable * table, Resource type,
 				  guint column, guint row)
 {
 	GtkWidget *box;
-	GtkWidget *image;
 
-	eventbox[resource_type] = box = gtk_event_box_new();
+	resource[type] = box = resource_view_new();
 	gtk_widget_show(box);
 	gtk_table_attach(table, box, column, column + 1, row, row + 1,
 			 GTK_EXPAND | GTK_FILL, GTK_FILL, 3, 0);
-	asset_images[resource_type] = image = gtk_image_new();
-	gtk_widget_show(image);
-	gtk_container_add(GTK_CONTAINER(box), image);
-	gtk_widget_set_tooltip_text(box,
-				    resource_name(resource_type, TRUE));
-
-	g_signal_connect(G_OBJECT(image), "size_allocate",
-			 G_CALLBACK(on_image_size_allocate),
-			 GINT_TO_POINTER(resource_type));
 }
 
 GtkWidget *resource_build_panel(void)
@@ -144,14 +106,10 @@ GtkWidget *resource_build_panel(void)
 	return table;
 }
 
-void frontend_resource_change(Resource type, gint new_amount)
+void frontend_resource_change(Resource type, G_GNUC_UNUSED gint new_amount)
 {
 	if (type < NO_RESOURCE) {
 		char buff[16];
-		gint res[NO_RESOURCE];
-
-		memset(res, 0, sizeof(res));
-		res[type] = new_amount;
 
 		snprintf(buff, sizeof(buff), "%d", resource_total());
 		gtk_label_set_text(GTK_LABEL(asset_total_label), buff);
@@ -165,88 +123,4 @@ void frontend_resource_change(Resource type, gint new_amount)
 		rebuild_single_resource(type);
 	}
 	frontend_gui_update();
-}
-
-void resource_format_type_image(GtkImage * image, const gint * resources,
-				gint max_width)
-{
-	gint num_res, tot_res, idx, i, pos;
-
-	GdkPixmap *p, *pdest;
-	GdkBitmap *b, *bdest;
-	gchar *data;
-	gint size, step;
-	gint width;
-	cairo_t *cr;
-	GdkRectangle r;
-
-	num_res = tot_res = 0;
-	for (idx = 0; idx < NO_RESOURCE; idx++) {
-		if (resources[idx]) {
-			num_res++;
-			tot_res += resources[idx];
-		}
-	}
-
-	if (tot_res == 0) {
-		tot_res = 1;	/* Avoid division by zero */
-	}
-
-	size = gui_get_resource_pixmap_res();
-	pos = 0;
-
-	if (max_width <= 0 || tot_res == num_res
-	    || max_width >= size * tot_res) {
-		step = size;
-		width = size * num_res + step * (tot_res - num_res);
-		if (width < max_width)
-			width = max_width;
-	} else {
-		step = (max_width - num_res * size) / (tot_res - num_res);
-		if (step <= 0)
-			step = 1;
-		width = max_width;
-	}
-
-	pdest =
-	    gdk_pixmap_new(NULL,
-			   width, size, gdk_visual_get_system()->depth);
-	data = g_malloc0((((width + 7) >> 3) * size));
-	bdest =
-	    gdk_bitmap_create_from_data(NULL, data,
-					size * num_res + step * (tot_res -
-								 num_res),
-					size);
-	g_free(data);
-
-	r.x = 0;
-	r.y = 0;
-	r.width = width;
-	r.height = width;
-	for (idx = 0; idx < NO_RESOURCE; idx++) {
-		if (!resources[idx])
-			continue;
-		gui_get_resource_pixmap(idx, &p, &b);
-		for (i = 0; i < resources[idx]; i++) {
-			cr = gdk_cairo_create(pdest);
-			gdk_cairo_set_source_pixmap(cr, p, pos, 0);
-			gdk_cairo_rectangle(cr, &r);
-			cairo_fill(cr);
-			cairo_destroy(cr);
-
-			cr = gdk_cairo_create(bdest);
-			gdk_cairo_set_source_pixmap(cr, b, pos, 0);
-			gdk_cairo_rectangle(cr, &r);
-			cairo_fill(cr);
-			cairo_destroy(cr);
-
-			pos += step;
-		}
-		pos += size - step;
-	}
-
-	gtk_image_set_from_pixmap(image, pdest, bdest);
-
-	g_object_unref(pdest);
-	g_object_unref(bdest);
 }
