@@ -1,3 +1,11 @@
+2011-07-25  Roland Clobus <rclobus@rclobus.nl>
+	* Makefile.am, client/gtk/frontend.h, client/gtk/resource-view.gob,
+	client/gtk/resource.c, client/gtk/legend.c, client/gtk/gui.c,
+	client/gtk/Makefile.am, client/gtk/gui.h: Move all display functions of
+	resources to resource-view.gob. Also fix the .gob make rules. Also use
+	cairo for the display of the resources, which allows for fractional
+	coordinates and smooth resizing.
+
 2011-07-20  Roland Clobus <rclobus@rclobus.nl>
 	* common/notifying-string.gob: make reindent
 
